# dots

./: .gitconfig  .gitignore  .nvim.lua  .xinitrc  README.md  _dotmgr.sh  configuration.nix  db.json  dotmgr.sh  exclude  flake.nix  hardware-configuration.nix  home.nix  maintain.py  notes.md  notes.md~  user.json  user.nix
.config/awesome/: rc.lua
.config/flameshot/: flameshot.ini
.config/home-manager/: home.nix
.nvim/: nixos.json  nvim.json  worklaptop.json
backups/: .bashrc  .tmux.conf  .zshrc
backups/.screenlayout/: lp-mh.sh
config/home-manager/: home.nix
configs/alacritty/: alacritty.toml
configs/awesome/: rc.lua
etc/lightdm/: lightdm.conf
hosts/nixos/: default.nix  hardware-configuration.nix  home.nix
hosts/worklaptop/: home.nix
modules/: default.nix  git.nix
modules/firefox/: default.nix  profiles.nix  user.nix
modules/git/: default.nix
modules/hm/: default.nix  fonts.nix
modules/home/: default.nix
modules/hyprland/: default.nix
modules/network-sharing/: default.nix  samba-wsdd.nix  samba.nix
modules/nixos/: default.nix  direnv.nix  fonts.nix  zsh.nix
modules/shared/: fonts.nix
modules/shell/: default.nix  starship.nix  zsh.nix
modules/system/: default.nix  nautilus.nix  network-sharing.nix  nix-gaming.nix
nixos/: configuration.nix  hardware-configuration.nix  nvidia.nix  programs.nix
nixos/programs/: battlenet.nix  default.nix  firefox.nix  git.nix  (+4 more)
scripts/: launch_vscode_workspace.sh  tut_systemd_boot.sh
system/: default.nix  fonts.nix  neovim.nix
templates/ocaml/: .envrc  .ocamlformat  dune-project  flake.nix
(+93 files in other folders)
